# gnovi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties  turbo.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-codeql.yml  ci-commits.yml  ci-docker.yml  ci-frontend.yml  ci-python.yml  ci-security.yml  ci-sonarcloud.yml
.reuse/: dep5
apps/api/: Dockerfile  pyproject.toml
apps/api/src/gnovi/api/: __init__.py
apps/api/tests/: test_api.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/gnovi/worker/: __init__.py
apps/worker/tests/: test_worker.py
docs/: docusaurus.config.ts  gnovi-algorithm-reference-plan.md  gnovi-founding-blueprint.md  gnovi-implementation-roadmap.md  gnovi-innovation-opportunities-reference.md  gnovi-intelligence-pack-architecture.md  gnovi-market-intelligence-reference.md  gnovi-poc-validation-plan.md  package.json  sidebars.ts  tsconfig.json
docs/adr/: 001-monorepo-structure.md  _template.md
docs/docs/architecture/: overview.md
docs/docs/getting-started/: quickstart.md
docs/src/pages/: index.tsx
experiments/: README.md
experiments/poc-01-falkordb-graphiti/: README.md  pyproject.toml
experiments/poc-01-falkordb-graphiti/src/poc_01/: run.py
experiments/poc-02-mcp-schema-discovery/: README.md  pyproject.toml
experiments/poc-02-mcp-schema-discovery/src/poc_02/: __init__.py  run.py
experiments/poc-03-gliner-extraction/: README.md  pyproject.toml
experiments/poc-03-gliner-extraction/src/poc_03/: run.py
experiments/poc-04-entity-resolution/: README.md  pyproject.toml
experiments/poc-04-entity-resolution/src/poc_04/: run.py
infra/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
infra/scripts/: seed.sh  setup.sh
libs/core/: pyproject.toml
libs/core/src/gnovi/core/: __init__.py
libs/core/tests/: test_core.py
libs/db/: pyproject.toml
libs/db/src/gnovi/db/: __init__.py
libs/db/tests/: test_db.py
