[project]
name = "gnovi-api"
version = "0.1.0"
description = "Gnovi FastAPI backend"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "gnovi-core",
    "gnovi-db",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
]

[tool.uv.sources]
gnovi-core = { workspace = true }
gnovi-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnovi"]
