[project]
name = "gnovi-worker"
version = "0.1.0"
description = "Gnovi Celery background worker"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "gnovi-core",
    "gnovi-db",
    "celery[redis]>=5",
]

[tool.uv.sources]
gnovi-core = { workspace = true }
gnovi-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnovi"]
