[project]
name = "poc-02-mcp-schema-discovery"
version = "0.1.0"
description = "POC: MCP schema discovery for entity type inference"
requires-python = ">=3.13"
dependencies = [
    "gnovi-core",
]

[tool.uv.sources]
gnovi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
