[project]
name = "poc-03-gliner-extraction"
version = "0.1.0"
description = "POC: GLiNER2 + GLiNKER + GLiREL extraction quality"
requires-python = ">=3.13"
dependencies = [
    "gnovi-core",
]

[tool.uv.sources]
gnovi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
