[project]
name = "poc-04-entity-resolution"
version = "0.1.0"
description = "POC: Entity resolution accuracy and false positive rate"
requires-python = ">=3.13"
dependencies = [
    "gnovi-core",
]

[tool.uv.sources]
gnovi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
