[project]
name = "gnovi-db"
version = "0.1.0"
description = "Gnovi database models, migrations, and connections"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
    "gnovi-core",
]

[tool.uv.sources]
gnovi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnovi"]
